fix: fix spacing for spanish date selector on event search

--- a/src/app/components/header/sarviews-header/sarviews-header.component.scss
+++ b/src/app/components/header/sarviews-header/sarviews-header.component.scss
@@ -1,3 +1,5 @@
+$width: 330px;
+
 .medium-selector--layout {
   flex: 1 1 175px;
   box-sizing: border-box;
@@ -6,8 +8,8 @@
 }
 
 .large-selector--layout {
-  flex: 1 1 300px;
+  flex: 1 1 $width;
   box-sizing: border-box;
-  max-width: 300px;
-  min-width: 300px;
+  max-width: $width;
+  min-width: $width;
 }
