--- a/src/app/components/shared/selectors/sarviews-event-type-selector/sarviews-event-type-selector.component.scss
+++ b/src/app/components/shared/selectors/sarviews-event-type-selector/sarviews-event-type-selector.component.scss
@@ -1,1 +1,3 @@
-
+.sarviews-selector--container {
+  width: 160px;
+}
